--- a/report/interim/includes.tex
+++ b/report/interim/includes.tex
@@ -34,6 +34,7 @@
 \usepackage{latexsym}
 \usepackage[pdftex,pagebackref,hypertexnames=false,colorlinks]{hyperref} % provide links in pdf
 \usepackage{amsfonts}
+\usepackage{booktabs}
 
 \hypersetup{pdftitle={},
   pdfsubject={}, 
