--- a/report/thesis/references.bib
+++ b/report/thesis/references.bib
@@ -352,3 +352,12 @@
   urldate = {2024-01-31},
   file = {/Users/charlielidbury/Zotero/storage/99KAJ4D6/technical_details.html}
 }
+
+@inproceedings{altenkirch2010pisigma,
+  title={$\Pi$$\Sigma$: Dependent types without the sugar},
+  author={Altenkirch, Thorsten and Danielsson, Nils Anders and L{\"o}h, Andres and Oury, Nicolas},
+  booktitle={Functional and Logic Programming: 10th International Symposium, FLOPS 2010, Sendai, Japan, April 19-21, 2010. Proceedings 10},
+  pages={40--55},
+  year={2010},
+  organization={Springer}
+}
